--- a/.luarc.json
+++ b/.luarc.json
@@ -39,6 +39,8 @@
         "drop_weapon",
         "_",
         "write_bit",
-        "execute_command_sequence"
+        "execute_command_sequence",
+        "write_byte",
+        "to_real_index"
     ]
 }
