--- a/.luarc.json
+++ b/.luarc.json
@@ -31,6 +31,7 @@
         "read_byte",
         "to_real_index",
         "say_all",
-        "sync_ammo"
+        "sync_ammo",
+        "intersect"
     ]
 }
