--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yaml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yaml
@@ -97,4 +97,4 @@ body:
     attributes:
       value: |
         **🙏 Thank You for Your Contribution!**  
-        Your feature request will be reviewed by the team, and we’ll get back to you as soon as possible. If you have any questions, feel free to reach out to us on [Discord](https://discord.gg/wuVcM9AZrr) or via email at [jericho.crosby227@gmail.com](mailto:jericho.crosby227@gmail.com).
+        Your feature request will be reviewed by the team, and we’ll get back to you as soon as possible. If you have any questions, feel free to reach out on [Discord](https://discord.gg/D76H7RVPC9).
