--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yaml
@@ -82,6 +82,6 @@ body:
     attributes:
       value: |
         **🙏 Thank You for Your Contribution!**  
-        Your bug report will be reviewed by the team, and we’ll get back to you as soon as possible. If you have any questions, feel free to reach out to us on [Discord](https://discord.gg/wuVcM9AZrr) or via email at [jericho.crosby227@gmail.com](mailto:jericho.crosby227@gmail.com).
+        Your bug report will be reviewed by the team, and we’ll get back to you as soon as possible. If you have any questions, feel free to reach out on [Discord](https://discord.gg/D76H7RVPC9).
 
         **Your effort in reporting bugs is invaluable to improving the quality of our scripts!**
