Added halo_type to .luarc.json

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,47 +1,47 @@
 {
-    "diagnostics.globals": [
-        "api_version",
-        "register_callback",
-        "cb",
-        "read_dword",
-        "sig_scan",
-        "get_var",
-        "halo_type",
-        "player_present",
-        "read_word",
-        "player_alive",
-        "get_dynamic_player",
-        "read_vector3d",
-        "cprint",
-        "read_float",
-        "execute_command",
-        "drop_weapon",
-        "exit_vehicle",
-        "destroy_object",
-        "enter_vehicle",
-        "spawn_object",
-        "get_object_memory",
-        "lookup_tag",
-        "read_bit",
-        "write_dword",
-        "safe_write",
-        "get_player",
-        "rprint",
-        "write_char",
-        "write_byte",
-        "read_byte",
-        "to_real_index",
-        "say_all",
-        "sync_ammo",
-        "intersect",
-        "assign_weapon",
-        "write_word",
-        "write_float",
-        "write_bit",
-        "execute_command_sequence",
-        "write_vector3d",
-        "unregister_callback",
-        "rand",
-        "halo_type"
-    ]
+  "diagnostics.globals": [
+    "api_version",
+    "assign_weapon",
+    "cb",
+    "cprint",
+    "destroy_object",
+    "drop_weapon",
+    "enter_vehicle",
+    "execute_command",
+    "execute_command_sequence",
+    "exit_vehicle",
+    "get_dynamic_player",
+    "get_object_memory",
+    "get_player",
+    "get_var",
+    "halo_type",
+    "halo_type",
+    "intersect",
+    "lookup_tag",
+    "player_alive",
+    "player_present",
+    "rand",
+    "read_bit",
+    "read_byte",
+    "read_dword",
+    "read_float",
+    "read_vector3d",
+    "read_word",
+    "register_callback",
+    "rprint",
+    "safe_write",
+    "say_all",
+    "sig_scan",
+    "spawn_object",
+    "sync_ammo",
+    "to_real_index",
+    "unregister_callback",
+    "write_bit",
+    "write_byte",
+    "write_char",
+    "write_dword",
+    "write_float",
+    "write_vector3d",
+    "write_word"
+  ]
 }
