--- a/.luarc.json
+++ b/.luarc.json
@@ -2,7 +2,9 @@
   "diagnostics.globals": [
     "api_version",
     "assign_weapon",
+    "byte",
     "cb",
+    "clean_infractions",
     "cprint",
     "destroy_object",
     "drop_weapon",
@@ -15,7 +17,6 @@
     "get_player",
     "get_var",
     "halo_type",
-    "halo_type",
     "intersect",
     "lookup_tag",
     "player_alive",
@@ -25,20 +26,23 @@
     "read_byte",
     "read_dword",
     "read_float",
+    "read_string",
     "read_vector3d",
     "read_word",
-    "register_callback",
     "rprint",
     "safe_write",
+    "say",
     "say_all",
+    "set_callback",
     "sig_scan",
     "spawn_object",
+    "spawn_projectile",
     "sync_ammo",
+    "timer",
     "to_real_index",
     "unregister_callback",
     "write_bit",
     "write_byte",
-    "write_char",
     "write_dword",
     "write_float",
     "write_vector3d",
