--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yaml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yaml
@@ -32,7 +32,7 @@ body:
     attributes:
       label: 🎯 Expected Behavior
       description: |
-        Describe what **should have happened** if the bug hadn’t occurred. Be clear and concise.
+        Describe what **should have happened** if the bug hadn't occurred. Be clear and concise.
       placeholder: "Explain the expected behavior clearly."
     validations:
       required: true
@@ -82,6 +82,6 @@ body:
     attributes:
       value: |
         **🙏 Thank You for Your Contribution!**  
-        Your bug report will be reviewed by the team, and we’ll get back to you as soon as possible. If you have any questions, feel free to reach out on [Discord](https://discord.gg/D76H7RVPC9).
+        Your bug report will be reviewed by the team, and we'll get back to you as soon as possible. If you have any questions, feel free to reach out on [Discord](https://discord.gg/D76H7RVPC9).
 
         **Your effort in reporting bugs is invaluable to improving the quality of our scripts!**
