Fix for bitmask pattern not working correctly on some maps for sequential race types

--- a/.luarc.json
+++ b/.luarc.json
@@ -49,6 +49,7 @@
     "write_word",
         "register_callback",
         "write_short",
-        "write_int"
+        "write_int",
+        "bit"
   ]
 }
